create auth-controller
